--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,16 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
-author: Your Name
+url: https://chiahoo2004.github.io/
+title: Chia-Ho Lin
+email: chiahoo2004@gmail.com
+author: Chia-Ho Lin
 description: > # "Write an awesome description for your new site here. 
   You can edit this line in _config.yml. It will appear in your document 
   head meta (for Google search results) and in your feed.xml site 
   description.
-copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
-credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
+#copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
+#credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -27,8 +27,8 @@ permalink: pretty
 
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
+    url: https://twitter.com/chiahoo2004
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+    url: https://github.com/chiahoo2004
   - title: linkedin
-    url: 
+    url: https://www.linkedin.com/in/chia-ho-lin-14947415b/
